release 1.0.1 (2008-11/12)
- Fix for issue 143
  https://jersey.dev.java.net/issues/show_bug.cgi?id=143
  Improve error message when @Path value syntax is incorrect and is most likely
  because a path parameter is not terminated with a '}'.
- Enable the injection of of FormDataContentDispostion when using @FormParam
  in conjuction with "multipart/form-data". This enables access to parameters
  on the "form-data" content disposition header such as the value of the
  "filename" parameter.
- The following classes have been modified to include the creation of
  a container with an instance of an IoCContainerProviderFactory:
  - com.sun.jersey.api.container.ContainerFactory
  - com.sun.jersey.api.container.httpserver.HttpServerFactory
  - com.sun.jersey.api.container.grizzly.GrizzlyServerFactory
  A com.sun.jersey.spi.container.ContainerProvider implementaton should not
  initiate the web application, otherwise the IoCContainerProviderFactory
  instance cannot be set.
- The following classes in jersey-core have moved:
  - The following classes in package "com.sun.jersey.api" have moved to
    the package "com.sun.jersey.core.header": InBoundHeaders, MediaTypes and
    OutBoundHeaders.
  - The following classe in package "com.sun.jersey.api" have moved to
    the package "com.sun.jersey.core.util": MultivaluedMapImpl.
- The Spring servlet automatically registers Spring-based classes (declared
  via the XML configuration or autowiring) and no configuration via the web.xml
  servlet initialization parameters is required unless non-Spring managed
  classes also need to be registered.
- Fixed issue 141
  https://jersey.dev.java.net/issues/show_bug.cgi?id=141
  A request filter can modify the request URI.
- Fixed issue 88
  https://jersey.dev.java.net/issues/show_bug.cgi?id=88
  @PostConstruct and @PreDestroy are supported on resource and provider
  classes.
- Fixed issue 136
  https://jersey.dev.java.net/issues/show_bug.cgi?id=136