@@ -1,5 +1,8 @@
 release 1.0.1 (2008-11/12)
-- Fix for issue 143
+- Fixed issue 131
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=131
+  The use of javax.activation.DataSource no longer depends on the JavaMail jar.
+- Fixed issue 143
   https://jersey.dev.java.net/issues/show_bug.cgi?id=143
   Improve error message when @Path value syntax is incorrect and is most likely
   because a path parameter is not terminated with a '}'.
